--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hello World
-email: mira@coyobi.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Step by step
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: mindcloud92
+
+profile:
+  github: mindcloud92.gihub.io
+  email: mira@coyobi.com
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+sass:
+  sass_dir: static/css/partial
+  style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -45,7 +47,7 @@ plugins:
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
-#   - Gemfile
+#   - Gemfiles
 #   - Gemfile.lock
 #   - node_modules/
 #   - vendor/bundle/
