--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 profile:
-  github: mindcloud92.gihub.io
-  email: mira@coyobi.com
+  github: https://github.com/mindcloud92
+  email: mailto:mira@coyobi.com
 
 # Build settings
 theme: minima
