--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ profile:
   github: "https://github.com/mindcloud92"
   email: "mailto:mira@coyobi.com"
 
-custom-theme: pink-theme
+#custom-theme: blue-theme
 
 plugins:
   - jekyll-feed
