--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Step by step
+title: DdDd
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://super-dev.xyz" # the hostname & protocol for site
 
