--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,9 @@ sass:
   sass_dir: static/css/partial
   style: compressed
 
+category-color-class:
+  book : brown
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
