--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,18 @@ custom-theme: pink-theme
 
 ga-stream-id: G-JQ9TZ4W7KK
 
+pagination:
+  enabled: true
+  per_page: 12
+  limit: 0
+  sort_field: date
+  sort_reverse: true
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-paginate-v2
 
 permalink: pretty
 
