--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ account:
   github: 'https://github.com/mindcloud92'
   email: 'mailto:mira@coyobi.com'
 
-theme_color: blue
+theme_color: pink
 
 ga_stream_id: G-JQ9TZ4W7KK
 
