--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Dd:Dd
+description: '" 어린아이가 탈 없이 잘 놀며 자라는'
 
 url: 'https://super-dev.xyz'
 ga_stream_id: G-JQ9TZ4W7KK
@@ -14,6 +15,3 @@ sass:
   sass_dir: static/css/partial
   style: compressed
 
-
-theme:
-  color: black
